--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
           <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a>
         </div>
         <div class="col-xs-6 col-md-3 col-lg-2 text-right">
-          <object type="image/svg+xml" tabindex="-1" role="img" data="./GCWeb/assets/wmms-blk.svg" aria-label="Symbole du gouvernement du Canada"></object>
+          <object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.baseurl }}/assets/wet-boew/assets/wmms-blk.svg" aria-label="Symbole du gouvernement du Canada"></object>
         </div>
       </div>
     </div>
