--- a/docs/_includes/codeTable.html
+++ b/docs/_includes/codeTable.html
@@ -1,31 +1,113 @@
-<table class="wb-tables table table-striped table-hover">
-  <thead>
-    <tr>
-      <th>Department</th>
-      <th>Project Name</th>
-      <th>Description</th>
-      <th>Licence</th>
-      <th>Code</th>
-    </tr>
-  </thead>
-  <tbody>
-    
-    {% for orgs in site.data.code %}
-      {% assign org = orgs[1] %}
-      {% for release in org.releases %}
-      <tr>
-        <td>{{ org.name[page.lang] }}</td>
-        <td>{{ release.name[page.lang] }}</td>
-        <td>{{ release.desc[page.lang] }}</td>
-        <td>
-          {% for license in release.licenses %}
-            <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.name }}</a>&nbsp;
+<div class="row">
+  <div class="col-md-3">
+  <details open>
+    <summary><h4 class="h4">Filter Options</h4></summary>
+    <form class="wb-tables-filter" data-bind-to="dataset-filter">
+      <div class="form-group">
+        <label for="dt_department">Department</label>
+        <select class="form-control" id="dt_department" name="dt_department" data-column="0">
+          <option value=""></option>
+          {% for depts in site.data.code %}
+            {% assign dept = depts[1] %}
+            <option value="{{ dept.name[page.lang] }}">{{ dept.name[page.lang] }}</option>
           {% endfor %}
-        </td> 
-        <td><a href="{{ release.repositoryURL[page.lang] }}" target="_blank">{{ release.vcs }}</a></td>
+        </select>
+      </div>
+      
+      <div class="form-group">
+        <label for="dt_licence">Licence</label>
+        <select class="form-control" id="dt_licence" name="dt_licence" data-column="3">
+          <option value=""></option>
+          {% assign license_array = "" | split: ',' %}
+          {% for depts in site.data.code %}
+            {% assign dept = depts[1] %}
+            {% for release in dept.releases %}
+              {% for license in release.permissions.licenses %}
+                {% assign license_array = license_array | push: license %}
+              {% endfor %}
+            {% endfor %}
+          {% endfor %}
+          {% assign license_array = license_array | group_by: "name"  %}
+          {% for license in license_array %}
+            <option value="{{ license.name }}">{{ license.name }}</option>
+          {% endfor %}
+        </select>
+      </div>
+      
+      <div class="form-group">
+        <label for="dt_tag">Tag</label>
+        <select class="form-control" id="dt_tag" name="dt_tag" data-column="5">
+          <option value=""></option>
+          {% assign tag_array = "" | split: ',' %}
+          {% for depts in site.data.code %}
+            {% assign dept = depts[1] %}
+            {% for release in dept.releases %}
+              {% for tag in release.tags[page.lang] %}
+                {% assign tag_array = tag_array | push: tag %}
+              {% endfor %}
+            {% endfor %}
+          {% endfor %}
+          {% assign tag_array = tag_array | group_by: "" %}
+          {% for tag in tag_array %}
+            <option value="{{ tag.name }}">{{ tag.name }}</option>
+          {% endfor %}
+        </select>
+      </div>
+      
+      <div class="row">
+        <div class="col-xs-6">
+          <button type="submit" class="btn btn-primary" aria-controls="dataset-filter">Filter</button>
+        </div>
+        <div class="col-xs-6">
+          <button type="reset" class="btn btn-default">Clear</button>
+        </div>
+      </div>
+      
+    </form>
+  </details>
+</div>
+<div class="col-md-9">
+  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4], "visible": false}]}'>
+    <thead>
+      <tr>
+        <th>Department</th>
+        <th>Project Name</th>
+        <th>Description</th>
+        <th>Licence</th>
+        <th>Usage Type</th>
+        <th>Tags</th>
+        <th>Code</th>
       </tr>
+    </thead>
+    <tbody>
+      
+      {% for depts in site.data.code %}
+        {% assign dept = depts[1] %}
+        {% for release in dept.releases %}
+        <tr>
+          <td>{{ dept.name[page.lang] }}</td>
+          <td>{{ release.name[page.lang] }}</td>
+          <td>{{ release.description[page.lang] }}</td>
+          <td>
+            {% for license in release.permissions.licenses %}
+              <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.name }}</a>&nbsp;
+            {% endfor %}
+          </td>
+          <td>{{ release.permissions.usageType }}</td>
+          <td>
+            {% for tag in release.tags[page.lang] %}
+              {{ tag }}&nbsp;
+            {% endfor %}
+          </td>
+          <td>
+            <a href="{{ release.repositoryURL[page.lang] }}" target="_blank">
+              {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
+            </a>
+          </td>
+        </tr>
+        {% endfor %}
       {% endfor %}
-    {% endfor %}
 
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
