--- a/docs/_includes/codeTable.html
+++ b/docs/_includes/codeTable.html
@@ -9,8 +9,10 @@
         <label for="dt_department">Department</label>
         <select class="form-control" id="dt_department" name="dt_department" data-column="0">
           <option value=""></option>
-          {% for dept in site.data.ministeres-departments %}
-            <option value="{{ dept.name[page.lang] }}">{{ dept.name[page.lang] }}</option>
+          {% for depts in site.data.code %}
+            {% assign dept = depts[1] %}
+            {% assign dName = site.data.ministeres-departments | where: "code", dept.deptCode %}
+            <option value="{{ dName[0].name[page.lang] }}">{{ dName[0].name[page.lang] }}</option>
           {% endfor %}
         </select>
       </div>
@@ -90,7 +92,7 @@
         <tr>
           {% assign dName = site.data.ministeres-departments | where: "code", dept.deptCode %}
           <td>{{ dName[0].name[page.lang] }}</td>
-          <td><a class="wb-lbx" title="{{ release.name[page.lang] }}" href="#{{ release.name[page.lang] | slugify }}">{{ release.name[page.lang] }}</a></td>
+          <td><a class="wb-lbx" title="{{ release.name[page.lang] }}" href="#{{ release.name[page.lang] | slugify: 'pretty' }}">{{ release.name[page.lang] }}</a></td>
           <td>{{ release.description[page.lang] }}</td>
           <td>
             {% for license in release.permissions.licenses %}
