Vérifier si URL existe

--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -230,7 +230,9 @@
         {% if release.contact.email != nil %}
           <p><a href="mailto:{{ release.contact.email }}" target="_blank">{{ release.contact.email }}</a></p>
         {% endif %}
-        <p><a href="{{ release.contact.URL }}" target="_blank">{{ release.contact.URL }}</a></p>
+        {% if release.contact.URL != nil %}
+          <p><a href="{{ release.contact.URL }}" target="_blank">{{ release.contact.URL }}</a></p>
+        {% endif %}
         </div>
       </section>
     {% endfor %}
