--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -134,7 +134,7 @@
 
 <!-- Data Table -->
 <div class="col-md-9">
-  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4, 5], "visible": false}]}'>
+  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4, 5], "visible": false}], "paging": false}'>
     <thead>
       <tr>
         <th>Administration</th>
