change the div of filter to 3. hide tags, organization and type columns

--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -1,7 +1,7 @@
 <div class="row">
 
 <!-- Filter dropdowns -->
-<div class="col-md-2">
+<div class="col-md-3">
   <details open>
     <summary><h4 class="h4">Filter Options</h4></summary>
     <form class="wb-tables-filter" data-bind-to="dataset-filter">
@@ -147,7 +147,7 @@
 
 <!-- Data Table -->
 <div class="col-md-9">
-  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4, 5], "visible": true}], "paging": false}'>
+  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4, 5 , 7], "visible": false}], "paging": false}'>
     <thead>
       <tr>
         <th>Administration</th>
