add javascript and bootstrap libraries in footer and header. create an html file as a template

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,8 @@
 <head>
+  <!-- osc-schema-table style -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
   <meta charset="utf-8">
   <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 		  wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -24,5 +28,7 @@
   <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
   <script>dataLayer1 = [];</script>
   <!-- End Google Tag Manager -->
+
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/osc-schema-table.css">
 
 </head>
